@@ -1,3 +1,7 @@
+Tue Jun 20 10:31:00 BST 2000 Olly Betts
+
+	* Removed NearOrPhrasePostList - code shared was negligible
+
 Tue Jun 20 09:38:00 BST 2000 Olly Betts
 
 	* Tweaked some FIXME comments
